logs/Slang/generated/hdlconv/hdlconvertor_p733.sv.log
name: hdlconvertor_p733
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p733.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p733.sv:12:10: error: identifier 'size' used before its declaration
input [0:size-1] in;
         ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p733.sv:11:11: note: declared here
parameter size = 1, delay = 1;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p733.sv:16:10: error: identifier 'size' used before its declaration
logic [0:size-1] out;
         ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p733.sv:11:11: note: declared here
parameter size = 1, delay = 1;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p733.sv:22:1: error: language feature not yet supported
defparam
^~~~~~~~
